PROJECT(osgGauge)

OPTION(OSGGAUGE_EXAMPLES "Compile osgGauge Examples" YES)

set(CMAKE_MODULE_PATH "${osgGauge_SOURCE_DIR}/CMakeModules;${CMAKE_MODULE_PATH}")
set(LIBRARY_OUTPUT_PATH ${osgGauge_SOURCE_DIR}/lib)
set(EXECUTABLE_OUTPUT_PATH ${osgGauge_SOURCE_DIR}/bin)
LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH})

INCLUDE(MacroUtils)

SET(CMAKE_DEBUG_POSTFIX "D")

FIND_PACKAGE(OSG REQUIRED)

ADD_SUBDIRECTORY(src)

if(OSGGAUGE_EXAMPLES)
	add_subdirectory(examples)
endif(OSGGAUGE_EXAMPLES)

