add_subdirectory( cpp )
add_subdirectory( dem )
add_subdirectory( drawnorm )
add_subdirectory( faceter )
#add_subdirectory( filelist )
add_subdirectory( globe )
add_subdirectory( image )
add_subdirectory( lorenz )
add_subdirectory( movie )
add_subdirectory( osgfs )
add_subdirectory( osgviewer )
add_subdirectory( simplifier )
add_subdirectory( smoother )
add_subdirectory( spin )
add_subdirectory( sponge )

if( GLSL_FOUND )
    add_subdirectory( glsllint )
endif()

if( LUA51_FOUND )
    add_subdirectory( lua )
endif()

