#TODO FIND_DEPENDENCY( VRPN vrpn.h vrpn ${OSG_3RDPARTY_BIN} "D")

SET( LIB_NAME osgVRPN )

FILE( GLOB TARGET_SOURCES *.cpp )
FILE( GLOB TARGET_HEADERS *.h )

INCLUDE_DIRECTORIES( ${osgVRPN_SOURCE_DIR}/include ${OSG_INCLUDE_DIR} )

LINK_WITH_VARIABLES( osgVRPN OSGVIEWER_LIBRARY )

ADD_DEFINITIONS( -DOSGVRPN_LIBRARY )

# append "D" to debug product names
SET_TARGET_PROPERTIES( osgVRPN PROPERTIES DEBUG_POSTFIX "D" )

# hack to put .dll's in "bin", and .lib's in "lib"
IF (MSVC)
    SET_TARGET_PROPERTIES( osgVRPN PROPERTIES PREFIX "../../bin/" )
    SET_TARGET_PROPERTIES( osgVRPN PROPERTIES IMPORT_PREFIX "../" )
ENDIF (MSVC)

ADD_LIBRARY( ${LIB_NAME} SHARED
    ${TARGET_SOURCES}
    ${TARGET_HEADERS}
)

# vim: set sw=4 ts=8 et ic ai:
