SET( LIB_NAME osgVRPN )

FILE( GLOB TARGET_SOURCES *.cpp )
FILE( GLOB TARGET_HEADERS *.h )

INCLUDE_DIRECTORIES( ${osgVRPN_SOURCE_DIR}/include ${OSG_INCLUDE_DIR} )

ADD_DEFINITIONS( -DOSGVRPN_LIBRARY )

ADD_LIBRARY( ${LIB_NAME} SHARED
    ${TARGET_SOURCES}
    ${TARGET_HEADERS}
)

# append "D" to debug product names
SET_TARGET_PROPERTIES( ${LIB_NAME} PROPERTIES DEBUG_POSTFIX "D" )

# hack: put .dll in "bin", .lib in "lib"
IF (MSVC)
    SET_TARGET_PROPERTIES( ${LIB_NAME} PROPERTIES PREFIX "../../bin/" )
    SET_TARGET_PROPERTIES( ${LIB_NAME} PROPERTIES IMPORT_PREFIX "../lib/" )
ENDIF (MSVC)

LINK_WITH_VARIABLES( ${LIB_NAME} OSGVIEWER_LIBRARY )

# vim: set sw=4 ts=8 et ic ai:
